# data-structures-algorithms-group-study

./: CONTRIBUTING.md  README.md
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
adriano_python/01_swap_case/: swap_case.py
week-1/challenges/rafatedesco_python/01_swap_case/: README.md  pyproject.toml  swap_case.py
week-1/challenges/rafatedesco_python/01_swap_case/tests/: test_swap_case.py
week-1/challenges/rafatedesco_python/02_find_a_string/: find_a_string.py  pyproject.toml
week-1/challenges/rafatedesco_python/02_find_a_string/tests/: test_find_a_string.py
week-1/challenges/rafatedesco_python/03_symmetric_difference/: pyproject.toml  symmetric_difference.py
week-1/challenges/rafatedesco_python/03_symmetric_difference/tests/: test_symmetric_difference.py
week-1/challenges/rafatedesco_python/04_longest_consecutive_sequence/: README.md  longest_consecutive_sequence.py  pyproject.toml
week-1/challenges/rafatedesco_python/04_longest_consecutive_sequence/tests/: test_longest_consecutive_sequence.py
week-1/challenges/rafatedesco_python/05_merge_the_tools/: merge_the_tools.py  pyproject.toml
week-1/challenges/rafatedesco_python/05_merge_the_tools/tests/: test_merge_the_tools.py
week-1/challenges/yourname_language/02_find_a_string/: README.md
week-1/challenges/yourname_language/03_symmetric_difference/: README.md
week-1/challenges/yourname_language/05_merge_the_tools/: README.md
