[project]
name = "04-longest-consecutive-sequence"
version = "0.1.0"
description = "A Python project to find the length of the longest consecutive sequence in a list of integers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
